--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,8 @@ name: Build ZMK firmware
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
+  pull_request:
   workflow_dispatch:
 
 jobs:
@@ -22,8 +23,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build firmware
-        uses: zmkfirmware/zmk-build-action@v1
+        uses: zmkfirmware/zmk-build@v1
         with:
           board: ${{ matrix.board }}
           shield: ${{ matrix.shield }}
-          config: .
