--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build firmware
-        uses: zmkfirmware/zmk-build@v1
+        uses: zmkfirmware/zmk-build-action@v1
         with:
           board: ${{ matrix.board }}
           shield: ${{ matrix.shield }}
