--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,22 +8,9 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        include:
-          - board: nice_nano_v2
-            shield: corne_left
-          - board: nice_nano_v2
-            shield: corne_right
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Build firmware
-        uses: zmkfirmware/zmk-build-action@v1
-        with:
-          board: ${{ matrix.board }}
-          shield: ${{ matrix.shield }}
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    with:
+      board: nice_nano_v2
+      shield: |
+        corne_left
+        corne_right
