--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,8 @@ jobs:
   build:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
     with:
-      board: nice_nano_v2
-      shield: |
-        corne_left
-        corne_right
+      include: |
+        - board: nice_nano_v2
+          shield: corne_left
+        - board: nice_nano_v2
+          shield: corne_right
