--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
     with:
-      include: |
+      build_matrix: |
         - board: nice_nano_v2
           shield: corne_left
         - board: nice_nano_v2
