--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,15 +2,14 @@ name: Build ZMK firmware
 
 on:
   push:
-    branches: [ "main" ]
   pull_request:
   workflow_dispatch:
 
 jobs:
   build:
-    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@v0.2
     with:
-      boards: nice_nano_v2
-      shields: |
-        corne_left
-        corne_right
+      build_matrix_path: build.yaml   # opcional, default é build.yaml
+      config_path: config             # opcional, default é config
+      fallback_binary: bin            # opcional
+      archive_name: firmware          # opcional
